TAG: noteload-3-3-0-1
DATE: 09/26/2005
STAFF: lec
RELEASE: A
CHANGES: don't generate a Note record if the len(note) == 0

TAG: noteload-3-2-0-3
DATE: 04/21/2005
STAFF: lec
RELEASE: A
CHANGES: MPR

TAG: noteload-3-2-0-2
TAG: noteload-3-2-0-1
DATE: 03/25/2005
STAFF: lec
RELEASE: A
CHANGES: MPR

TAG: noteload-3-1-2-1
DATE: 03/18/2005
STAFF: lec
RELEASE: A
CHANGES: new

TAG: noteload-3-2-1-1
DATE: 03/15/2005
STAFF: lec
RELEASE: A
CHANGES: new

TAG: noteload-3-2-0-1
DATE: 03/10/2005
STAFF: lec
RELEASE: A
CHANGES: new
