@@ -1,3 +1,9 @@
+TAG: noteload-3-3-0-2
+DATE: 10/21/2005
+STAFF: lec
+RELEASE: A
+CHANGES: added incremental mode
+
 TAG: noteload-3-3-0-1
 DATE: 09/26/2005
 STAFF: lec
